--- a/css/bangaldesh.css
+++ b/css/bangaldesh.css
@@ -17,6 +17,9 @@
   .dark-1{
     color: #0E0E0E;
   }
+.dark-02{
+    color: #666363;
+}
 
   /* nav section */
   .navbar{
@@ -25,8 +28,8 @@
     max-width: 1600px;
     height: 100px; 
     align-items: center;
-    margin-left: 160px;
-    margin-right: 160px;
+    margin-left: 70px;
+    margin-right: 70px;
   }
  .nav-title{
     font-weight: bold;
@@ -41,4 +44,42 @@
     cursor: pointer;
     font-size: 18px;
     
+  }
+
+  /* banner-section */
+  .banner-section{
+    max-width:1120px;
+    height: 560px;
+    margin: 0 auto;
+    display: flex;
+    background-color: #C6E4D6;
+    border-radius: 24px;
+    justify-content: space-around;
+    align-items: center;
+    padding: 60px 50px 60px 50px;
+    gap: 64px;
+     
+  }
+  .banner-min-titile{
+    color: grey;
+    font-size: 24px;
+    font-weight: 600;
+  }
+  .banner-title{
+    font-size: 56px;
+    font-weight: bold;
+  }
+  .banner-img{
+    max-width: 474.03px;
+  }
+
+  .banner-btn{
+    color: white;
+    background-color: #006A50;
+    border: none;
+     width: 300px;
+     height: 56px;
+     border-radius: 8px;
+     font-size: 18px;
+      
   }
