added The Vision of Future section

--- a/css/bangaldesh.css
+++ b/css/bangaldesh.css
@@ -20,6 +20,9 @@
 .dark-02{
     color: #666363;
 }
+.text-justyfi{
+  text-align: justify;
+}
 
   /* nav section */
   .navbar{
@@ -81,18 +84,20 @@
      height: 56px;
      border-radius: 8px;
      font-size: 18px;
+     cursor: pointer;
       
   }
   /* pillars-card-01 */
   .piller-section{
-  
+
     max-width:1120px;
-    height: 560px;
+    height: 500px;
     margin: 0 auto;
+
   }
   .card{
     display: flex;
-    margin-top: 20px;
+    margin-top: 2px;
     gap: 24px;
     
   }
@@ -111,3 +116,85 @@
 
   
   }
+  .vison-part{
+    max-width:1300px;
+    margin: 0 auto;
+ 
+  }
+.card{
+  display: flex;
+  max-width:1200px;
+  height: 280px;
+  margin: 0 auto;
+  
+   
+}
+.vison-content{
+ margin-left: 40px;
+ margin-bottom: 30px;
+}
+.card-section{
+  padding: 30px;
+  background-color: rgb(252, 252, 252);
+  box-shadow: 10px 10px 20px rgb(243, 241, 241);
+  border-radius: 16px;
+ 
+  
+
+}
+.card-1{
+  background-color: rgba(84, 144, 245, 0.20);
+}
+.card-2{
+  background-color: rgba(198, 228, 214, 1.00);
+}
+.card-03{
+  background-color: rgba(247, 235, 207, 1.00);
+}
+.card-btn-1{
+  background-color: rgba(84, 144, 245, 1.00);
+  width: 130px;
+  height: 40px; 
+  border: none;
+  cursor: pointer;
+  color: white;
+  margin-top: 10px;
+  border-radius: 8px;
+   
+}
+
+.card-btn-2{
+  background-color: #09A15C ;
+  width: 130px;
+  height: 40px;
+  border: none;
+  cursor: pointer;
+  color: white;
+  margin-top: 10px;
+  border-radius: 8px;
+   
+}
+
+.card-btn-3{
+  background-color: #FFC239 ;
+  width: 130px;
+  height: 40px;
+  border: none;
+  cursor: pointer;
+  color: white;
+  margin-top: 10px;
+  border-radius: 8px;
+   
+}
+
+ 
+.second-card{
+  max-width:1200px;
+  margin: 0 auto;
+  background-color: #FFC239;
+  margin-top: 20px;
+  background-color: rgb(252, 252, 252);
+  box-shadow: 20px 20px 20px 20px rgb(227, 219, 219); 
+  padding: 25px 24px;
+  border-radius: 16px;
+}
